--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,10 +19,11 @@
 }
 
 .text-gradient-ripple {
-  background: linear-gradient(270deg, #185839, #fff176, #cddc39, #0058c7, #795548, #4dd0e1);
+  /* background: linear-gradient(270deg, #185839, #fff176, #cddc39, #0058c7, #795548, #4dd0e1); */
   background-size: 400% 400%;
   background-clip: text;
-  color: transparent;
+  /* color: transparent; */
+  color: #fff;
   animation: rippleGradient 5s ease infinite;
 }
 
