--- a/src/styles/extend.css
+++ b/src/styles/extend.css
@@ -68,15 +68,72 @@
 .ant-menu .ant-menu-submenu-expand-icon, .ant-menu .ant-menu-submenu-arrow，.ant-menu .ant-menu-submenu-title .ant-menu-item-icon svg {
     color: #4a4b68;
 }
-.ant-menu .ant-menu-item .ant-menu-item-icon svg, .ant-menu .ant-menu-submenu-title .ant-menu-item-icon svg
+.ant-menu .ant-menu-item .ant-menu-item-icon svg, .ant-menu .ant-menu-submenu-title .ant-menu-item-icon svg,
+.ant-menu-ant-menu-submenu.ant-menu-submenu-inline .ant-menu-submenu-title .ant-menu-item-icon svg
  {
     display: inline-block;
     color: #4a4b68;
 }
+
+
 /*选中状态的菜单*/
 .ant-menu-light .ant-menu-submenu-selected >.ant-menu-submenu-title,
 .ant-menu .ant-menu-item.ant-menu-item-selected .ant-menu-item-icon svg,
 .ant-menu-submenu-selected .ant-menu-submenu-title .ant-menu-item-icon svg
 {
     color: #fff;
+}
+.card-wapper {
+    boxShadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.03);
+    border: 1px solid #F1F1F4;
+    margin-bottom: 2.5rem;
+    /* height: '100%';
+    display: 'flex';
+    flexDirection: 'column'; */
+    height:'440px';
+}
+
+
+.pt-1{
+    padding-top: .25rem !important;
+}
+/* 字颜色*/
+.text-gray-500{
+    color: #99A1B7 !important;
+}
+.text-gray-800{
+    color: #252F4A !important;
+}
+.text-gray-900{
+    color: #071437 !important;
+}
+.fw-semibold
+ {
+    font-weight: 500 !important;
+}
+.fw-bold {
+    font-weight: 600 !important;
+}
+
+.fs-2hx {
+    font-size: 2.5rem !important;
+}
+.fs-3x {
+    font-size: 3rem !important;
+}
+
+.fs-5 {
+    font-size: 1.05rem !important;
+}
+.fs-6 {
+    font-size: 1.025rem !important;
+}
+.fs-7 {
+    font-size: .95rem !important;
+}
+.fs-8 {
+    font-size: .825rem !important;
+}
+.fs-9 {
+    font-size: .725rem !important;
 }
