--- a/src/styles/extend.css
+++ b/src/styles/extend.css
@@ -115,6 +115,12 @@
     font-weight: 600 !important;
 }
 
+.fs-4 {
+    font-size: 1.25rem !important;
+}
+.fs-1hx {
+    font-size: 1.5rem !important;
+}
 .fs-2hx {
     font-size: 2.5rem !important;
 }
