--- a/src/styles/extend.css
+++ b/src/styles/extend.css
@@ -92,6 +92,9 @@
     flexDirection: 'column'; */
     height:'440px';
 }
+.card-wapper .ant-card-head{
+    border: none;
+}
 
 
 .pt-1{
@@ -106,6 +109,9 @@
 }
 .text-gray-900{
     color: #071437 !important;
+}
+.background-gray-200{
+    background: #F1F1F4 !important;
 }
 .fw-semibold
  {
@@ -138,8 +144,11 @@
     font-size: .95rem !important;
 }
 .fs-8 {
-    font-size: .825rem !important;
+    font-size: .725rem !important;
 }
 .fs-9 {
     font-size: .725rem !important;
+}
+.ant-statistic .ant-statistic-title{
+    font-size: 12px !important;
 }
