--- a/src/styles/extend.css
+++ b/src/styles/extend.css
@@ -169,20 +169,20 @@
 }
 
 /*表格样式*/
-.css-dev-only-do-not-override-yta69t.ant-table-wrapper .ant-table-thead >tr>th,.ant-table-wrapper .ant-table-thead >tr>th{
+/* .css-dev-only-do-not-override-yta69t.ant-table-wrapper .ant-table-thead >tr>th,.ant-table-wrapper .ant-table-thead >tr>th{
     font-size: 13px;
     color: #99A1B7;
-}
+} */
 .ant-table-wrapper .ant-table.ant-table-middle .ant-table-tbody>tr>td{
     /* font-size: 14px; */
-    font-size: 13px;
+    /* font-size: 13px;
     color: #99A1B7;
     font-weight: 400 !important;
 }
 .ant-table-wrapper .ant-table-tbody >tr >td.ant-table-cell{
     font-size: 13px;
     font-weight: 400 !important;
-    color: #99A1B7;
+    color: #99A1B7; */
     /* font-size: .95rem !important; */
 }
 /*ant-picker 日期选择器*/
