--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,9 @@
 }
 @tailwind components;
 @tailwind utilities;
+body,html{
+  font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
 /* 移动端基础样式 */
 @layer base {
