--- a/src/styles/extend.css
+++ b/src/styles/extend.css
@@ -30,7 +30,8 @@
     /* color: #b6b9c8; */
     color: #bbb;
     font-size: 14px !important;
-    font-weight: 600;
+    font-weight: 500;
+    font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /* font-family: Inter, Helvetica, sans-serif; */
     line-height: 1.75;
     
@@ -68,7 +69,8 @@
 .ant-menu-light .ant-menu-submenu-title{
     color: #bbb;
     font-size: 14px !important;
-    font-weight: 600;
+    font-weight: 500;
+    font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /* font-family: Inter, Helvetica, sans-serif; */
 
 }
@@ -92,7 +94,7 @@
 .ant-menu-ant-menu-submenu.ant-menu-submenu-inline .ant-menu-submenu-title .ant-menu-item-icon svg
  {
     display: inline-block;
-    font-size: 18px;
+    font-size: 20px;
     /* color: #4a4b68; */
     color: #bbb;
 }
@@ -199,7 +201,7 @@
 .ant-menu-inline.ant-menu-root .ant-menu-submenu-title > .ant-menu-item-icon{
     /* color: #4a4b68; */
     color: #bbb;
-    font-size: 18px;
+    font-size: 20px;
 }
 .ant-menu-submenu.ant-menu-inline.ant-menu-submenu-open.ant-menu-submenu-selected > .ant-menu-submenu-title > .ant-menu-item-icon{
     color: #fff !important;
