--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,8 +6,21 @@
 @tailwind components;
 @tailwind utilities;
 body,html{
+  font-size: clamp(0.875rem, 2vw, 1.25rem); 
   font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+/* @media screen and (min-width: 1600px) {
+  .ant-menu-title-content {
+    font-size: 16px;
+  }
+  .ant-menu-sub .ant-menu-title-content a{
+    font-size: 16px;
+  }
+  .ant-menu-sub .ant-menu-item, .ant-menu-submenu-title{
+    height: 50px;
+  }
+} */
 
 /* 移动端基础样式 */
 @layer base {
