--- a/src/styles/extend.css
+++ b/src/styles/extend.css
@@ -23,14 +23,15 @@
     /* background-color: #0d0e12; */
     background-color: rgb(0, 20, 40);
     margin-top: 6px;
-    /* height: 42px; */
-    height: clamp(2.625rem, 5vw, 3.75rem);
+    height: 42px;
+    /* height: clamp(2.625rem, 5vw, 3.75rem); */
 }
 
 .ant-menu-light .ant-menu-item a{
     /* color: #b6b9c8; */
     color: #bbb;
-    font-size: clamp(0.875rem, 1.2vw, 1rem) !important;
+    font-size: 14px;
+    /* font-size: clamp(0.875rem, 1.2vw, 1rem) !important; */
     font-weight: 500;
     font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /* font-family: Inter, Helvetica, sans-serif; */
@@ -69,8 +70,8 @@
 /*子菜单*/
 .ant-menu-light .ant-menu-submenu-title{
     color: #bbb;
-    /* font-size: 14px !important; */
-    font-size: clamp(0.875rem, 1.2vw, 1rem) !important;
+    font-size: 14px !important;
+    /* font-size: clamp(0.875rem, 1.2vw, 1rem) !important; */
     font-weight: 500;
     font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /* font-family: Inter, Helvetica, sans-serif; */
