--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 body,html{
-  font-size: clamp(0.875rem, 2vw, 1.25rem); 
+  /* font-size: clamp(0.875rem, 2vw, 1.25rem);  */
   font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
